feat: overall pool stats (#20)
