# docs/swagger.json
@@ -675,6 +675,32 @@
                 }
             }
         },
+        "/api/v1/stats": {
+            "get": {
+                "description": "Get stats for all pools",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Overall"
+                ],
+                "summary": "Get overall stats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.StatsRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/teapot": {
             "get": {
                 "produces": [
@@ -1056,6 +1082,9 @@
                     "additionalProperties": {
                         "$ref": "#/definitions/api.Price"
                     }
+                },
+                "workers": {
+                    "type": "integer"
                 }
             }
         },
@@ -1084,6 +1113,9 @@
                 },
                 "algorithm": {
                     "type": "string"
+                },
+                "averageEffort": {
+                    "type": "number"
                 },
                 "blockHeight": {
                     "type": "integer"
@@ -1147,6 +1179,9 @@
                 },
                 "totalPayments": {
                     "type": "number"
+                },
+                "workers": {
+                    "type": "integer"
                 }
             }
         },
@@ -1226,6 +1261,37 @@
                 },
                 "priceChangePercentage24H": {
                     "type": "number"
+                }
+            }
+        },
+        "api.Stats": {
+            "type": "object",
+            "properties": {
+                "paymentsToday": {
+                    "type": "integer"
+                },
+                "totalMiners": {
+                    "type": "integer"
+                },
+                "totalSharesPerSecond": {
+                    "type": "number"
+                },
+                "totalWorkers": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.StatsRes": {
+            "type": "object",
+            "properties": {
+                "pageCount": {
+                    "type": "integer"
+                },
+                "result": {
+                    "$ref": "#/definitions/api.Stats"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
